- Fixed sponsor line breaks - Fixed mobile acknowledgments overflowing

--- a/bfa-23/css/sponsors.css
+++ b/bfa-23/css/sponsors.css
@@ -12,6 +12,7 @@ body {
     /* padding-bottom: 6vh; */
 
     width: 66.6%;
+    min-width: 1200px;
     margin: 0 auto;
 }
 
@@ -62,8 +63,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
+
+    /* space between */
+    justify-content: space-between;
+
+
     width: 100%;
+    min-width: 1200px;
 
     font-size: 1.1em;
 
@@ -77,7 +84,8 @@ body {
     flex-direction: row;
 
     justify-content: space-between;
-    width: 50vw;
+    width: 50%;
+    min-width: 960px;
 }
 
 #credits a {
@@ -104,11 +112,30 @@ body {
     flex-direction: row;
 }
 
+#credits p br {
+    display: none;
+}
+
 #credits img {
     width: 8em;
     /* height: 5em; */
     padding: 0;
     margin: 0;
+}
+
+#credits span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+#credits span a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 0.2em;
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
@@ -156,6 +183,7 @@ body {
         align-items: center;
         flex-direction: row;
         width: 100%;
+        min-width: 0;
 
         font-size: 1.2em;
     }
@@ -168,6 +196,7 @@ body {
 
         justify-content: space-between;
         width: 80%;
+        min-width: 0;
     }
 
     #credits a {
@@ -187,10 +216,17 @@ body {
 
         letter-spacing: 1px;
 
-        display: flex;
+        /* display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: row;
+        flex-direction: row; */
+
+        display: block;
+        text-align: center;
+    }
+
+    #credits p br {
+        display: block;
     }
 
     #credits img {
